--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.16.4",
     "helmet": "^3.15.1",
     "mongoose": "^5.4.16",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "prop-types": "^15.7.2"
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
