--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-helmet": "^5.2.0",
+    "react-helmet": "^5.2.1",
+    "react-redux": "^7.0.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5",
+    "react-scripts": "^3.0.1",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.2",
     "styled-components": "^4.1.3",
     "styled-reset": "^2.0.0"
   },
@@ -26,6 +29,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "proxy": "http://localhost:5000/"
+  ]
 }
