--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,7 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "client": "cd client && yarn start",
-    "server": "cd server && nodemon --exec babel-node server.js",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+    "server": "nodemon --exec babel-node server.js"
   },
   "dependencies": {
     "@babel/core": "^7.3.4",
@@ -14,6 +12,7 @@
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.4",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "helmet": "^3.15.1",
