--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "helmet": "^3.15.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.16",
     "morgan": "^1.9.1",
     "prop-types": "^15.7.2"
