--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "@babel/node": "^7.2.2",
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.4",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.16",
     "morgan": "^1.9.1",
+    "node-pre-gyp": "^0.13.0",
     "prop-types": "^15.7.2"
   },
   "devDependencies": {
