--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,11 @@
     "@babel/preset-env": "^7.3.4",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "express-session": "^1.16.2",
     "helmet": "^3.15.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.16",
