--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.8.3",
+    "react-cookie": "^4.0.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.8.3",
     "react-helmet": "^5.2.1",
     "react-redux": "^7.0.3",
