--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.16",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "node-pre-gyp": "^0.13.0",
     "prop-types": "^15.7.2"
   },
