--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "codemirror": "^5.48.0",
+    "marked": "^0.6.2",
+    "prismjs": "^1.16.0",
     "react": "^16.8.3",
     "react-cookie": "^4.0.0",
     "react-cookies": "^0.1.1",
