--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "classnames": "^2.2.6",
     "codemirror": "^5.48.0",
     "marked": "^0.6.2",
+    "node-sass": "^4.12.0",
+    "open-color": "^1.7.0",
     "prismjs": "^1.16.0",
     "react": "^16.8.3",
     "react-cookie": "^4.0.0",
