--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "codemirror": "^5.48.0",
+    "immer": "^3.1.3",
     "marked": "^0.6.2",
     "node-sass": "^4.12.0",
     "open-color": "^1.7.0",
